--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4.8"
+fern = "0.6.2"
+chrono = "0.4"
 tokio = { version = "1.29.1", features = ["full"] }
 tokio-tungstenite = "0.20"
 axum = { version = "0.6.19", features = ["ws", "headers"] }
@@ -17,5 +20,4 @@ futures-util = { version = "0.3", default-features = false, features = [
 headers = "0.3"
 tower = { version = "0.4", features = ["util"] }
 tower-http = { version = "0.4.0", features = ["fs", "trace"] }
-tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
