--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,10 @@
 name = "chaiwala"
 version = "0.1.1"
 edition = "2021"
-
+authors = ["Sho Kaneko <kanekoshoyu@gmail.com>"]
+description = "Endpoints for Kucoin Arbitrage Deployment"
+repository = "https://github.com/kanekoshoyu/chaiwala"
+license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
