--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "chaiwala"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 authors = ["Sho Kaneko <kanekoshoyu@gmail.com>"]
-description = "Endpoints for Kucoin Arbitrage Deployment"
+description = "Endpoints for Kucoin Arbitrage ECS Deployment"
 repository = "https://github.com/kanekoshoyu/chaiwala"
 license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
