--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,11 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+kucoin_api = "1.4.10"
+kucoin_arbitrage = "0.0.10"
 log = "0.4.8"
 fern = "0.6.2"
 chrono = "0.4"
-kucoin_arbitrage = "0.0.10"
 serenity = "0.11.6"
 tokio = { version = "1.29.1", features = ["full"] }
 tokio-tungstenite = "0.20"
