--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ log = "0.4.8"
 fern = "0.6.2"
 chrono = "0.4"
 serenity = "0.11.6"
+serde = "1.0.188"
+toml = "0.8.2"
 tokio = { version = "1.29.1", features = ["full"] }
 tokio-tungstenite = "0.20"
 axum = { version = "0.6.19", features = ["ws", "headers"] }
