--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,12 @@ kucoin_arbitrage = "0.0.10"
 log = "0.4.8"
 fern = "0.6.2"
 chrono = "0.4"
-serenity = "0.11.6"
+serenity = { version = "0.11.6", default-features = false, features = [
+    "client",
+    "gateway",
+    "rustls_backend",
+    "model",
+] }
 serde = "1.0.188"
 toml = "0.8.2"
 tokio = { version = "1.29.1", features = ["full"] }
