--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ license = "MIT"
 
 [dependencies]
 kucoin_api = "1.4.10"
-kucoin_arbitrage = "0.0.10"
+kucoin_arbitrage = "0.0.11"
 log = "0.4.8"
+failure = "0.1.8"
 fern = "0.6.2"
 chrono = "0.4"
 serenity = { version = "0.11.6", default-features = false, features = [
