--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,26 +9,33 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# core
 kucoin_api = "1.4.10"
 kucoin_arbitrage = "0.0.11"
+# logging
 log = "0.4.8"
-failure = "0.1.8"
 fern = "0.6.2"
 chrono = "0.4"
+# debugging
+failure = "0.1.8"
+# discord
 serenity = { version = "0.11.6", default-features = false, features = [
     "client",
     "gateway",
     "rustls_backend",
     "model",
 ] }
-serde = "1.0.188"
+# config
 toml = "0.8.2"
-tokio = { version = "1.29.1", features = ["full"] }
-tokio-tungstenite = "0.20"
-axum = { version = "0.6.19", features = ["ws", "headers"] }
+# servers
+axum = { version = "0.6.19", features = ["ws", "headers", "macros"] }
+headers = "0.3"
+serde = "1.0.188"
+# async
 futures = "0.3"
 futures-util = { version = "0.3", default-features = false, features = [
     "sink",
     "std",
 ] }
-headers = "0.3"
+tokio = { version = "1.29.1", features = ["full"] }
+tokio-tungstenite = "0.20"
