--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,23 @@ license = "MIT"
 [dependencies]
 # core
 kucoin_api = "1.4.10"
-kucoin_arbitrage = "0.0.11"
-# logging
-log = "0.4.8"
+kucoin_arbitrage = "0.0.13"
+# async
+futures = "0.3.28"
+futures-util = { version = "0.3.28", default-features = false, features = [
+    "sink",
+    "std",
+] }
+tokio = { version = "1.33.0", features = ["full"] }
+tokio-tungstenite = "0.20.1"
+# log
+log = "0.4.20"
 fern = "0.6.2"
-chrono = "0.4"
-# debugging
+chrono = "0.4.31"
+# config
+toml = "0.8.2"
+serde = "1.0.189"
+# debug
 failure = "0.1.8"
 # discord
 serenity = { version = "0.11.6", default-features = false, features = [
@@ -25,17 +36,6 @@ serenity = { version = "0.11.6", default-features = false, features = [
     "rustls_backend",
     "model",
 ] }
-# config
-toml = "0.8.2"
 # servers
-axum = { version = "0.6.19", features = ["ws", "headers", "macros"] }
-headers = "0.3"
-serde = "1.0.188"
-# async
-futures = "0.3"
-futures-util = { version = "0.3", default-features = false, features = [
-    "sink",
-    "std",
-] }
-tokio = { version = "1.29.1", features = ["full"] }
-tokio-tungstenite = "0.20"
+axum = { version = "0.6.20", features = ["ws", "headers", "macros"] }
+headers = "0.3.9"
