--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ tokio-tungstenite = "0.20.1"
 log = "0.4.20"
 fern = "0.6.2"
 chrono = "0.4.31"
+colored = "2.0.4"
 # config
 toml = "0.8.2"
 serde = "1.0.189"
